--- a/LILA-Server/lilaW/src/main/resources/templates/layout/header.html
+++ b/LILA-Server/lilaW/src/main/resources/templates/layout/header.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org"
-				xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/lilaLg.png" type="image/x-icon"/>
     <link rel="stylesheet" type="text/css" href="css/headerfooter.css">
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <title>리라</title>
 </head>
 <body>
     <header>
-      <h1><a href="#"><img class="mainLogo" src="img/lilaLg.png"></a></h1>
+      <h1><a href="#"><img class="mainLogo" src="/img/lilaLg.png"></a></h1>
       <nav class="nav_left">
         <input placeholder="어떤 동호회에 가입하고 싶으신가요?"/>
       </nav>
