WebServer / 메인페이지 화면설계중 : 메뉴바 및 캐러셀 완성

--- a/LILA-Server/lilaW/src/main/resources/templates/layout/footer.html
+++ b/LILA-Server/lilaW/src/main/resources/templates/layout/footer.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/headerfooter.css">
+    <link rel="stylesheet" type="text/css" href="/css/headerfooter.css">
 </head>
 <body>
-    <hr/>
     <footer>
         <div class="footer_top">
             <div class="ft_content1">
