--- a/LILA-Server/lilaW/src/main/resources/templates/layout/header.html
+++ b/LILA-Server/lilaW/src/main/resources/templates/layout/header.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/lilaLg.png" type="image/x-icon"/>
-    <link rel="stylesheet" type="text/css" href="css/headerfooter.css">
+    <link rel="stylesheet" type="text/css" href="/css/headerfooter.css">
     <title>리라</title>
 </head>
 <body>
