--- a/LILA-Server/lilaW/src/main/resources/templates/index.html
+++ b/LILA-Server/lilaW/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
         <div class="slider_item1">
           <a href="#">
             <img class="menuIcon" src="/img/slide4.gif">
-            <p>101원에<br>준비해봤어요.<br><span>퀄리티는 그대로, 가격은 101원에지금 바로 시작하자!</span></p>
+            <strong>101원에<br>준비해봤어요.<br><span>퀄리티는 그대로, 가격은 101원에지금 바로 시작하자!</span></strong>
           </a>
           <div class="conatiner">
             <h5>01 | 01</h5>
@@ -43,7 +43,7 @@
         <div class="slider_item2">
           <a href="#">
             <img class="menuIcon" src="/img/slide1.png">
-            <p>인기클래스 준비물<br>매일 선착순 무료!<br><span>준비물 보상 쿠폰 다운받으면 누구나 필수 준비물 0원</span></p>
+            <strong>인기클래스 준비물<br>매일 선착순 무료!<br><span>준비물 보상 쿠폰 다운받으면 누구나 필수 준비물 0원</span></strong>
           </a>
           <div class="conatiner">
             <h5>01 | 02</h5>
@@ -59,7 +59,7 @@
         <div class="slider_item3">
           <a href="#">
             <img class="menuIcon" src="/img/slide5.png">
-            <p>마지막 최저가!<br>'동기부여 심리학'<br><span>월 24,000원!다짐한 모든 것을 성취하는 새해를 맞이하세요.</span></p>
+            <strong>마지막 최저가!<br>'동기부여 심리학'<br><span>월 24,000원!다짐한 모든 것을 성취하는 새해를 맞이하세요.</span></strong>
           </a>
           <div class="conatiner">
             <h5>01 | 03</h5>
@@ -75,7 +75,7 @@
         <div class="slider_item4">
           <a href="#">
             <img class="menuIcon" src="/img/slide2.png">
-            <p>1,259개 클래스<br>최대 73% 할인<br><span>아쉬운 올해를 보상하는 최대 규모 혜택 여행!</span></p>
+            <strong>1,259개 클래스<br>최대 73% 할인<br><span>아쉬운 올해를 보상하는 최대 규모 혜택 여행!</span></strong>
           </a>
           <div class="conatiner">
             <h5>01 | 04</h5>
@@ -91,7 +91,7 @@
         <div class="slider_item5">
           <a href="#">
             <img class="menuIcon" src="/img/slide3.png">
-            <p>역대최대할인!<br>빠르게 만나보세요!<br><span>내방에서 배우는 요가의 핵심! 지금바로 만나보세요.</span></p>
+            <strong>역대최대할인!<br>빠르게 만나보세요!<br><span>내방에서 배우는 요가의 핵심! 지금바로 만나보세요.</span></strong>
           </a>
           <div class="conatiner">
             <h5>01 | 05</h5>
@@ -104,9 +104,30 @@
         </div>
       </div>
     </div>
+    <div class="index_content1">
+      <ul class="main_point">
+        <li><a href="#"><img src="/img/img1.png"><span>오늘의 0원</span></a></li>
+        <li><a href="#"><img src="/img/img2.png"><span>24시간 할인</span></a></li>
+        <li><a href="#"><img src="/img/img3.png"><span>TOP 20</span></a></li>
+        <li><a href="#"><img src="/img/img4.png"><span>준비물 무료</span></a></li>
+        <li><a href="#"><img src="/img/img5.png"><span>1+1 클래스</span></a></li>
+        <li><a href="#"><img src="/img/img6.png"><span>무적 쿠폰</span></a></li>
+      </ul>
+    </div>
+    <div class="index_content2">
+      <a href="#">준비물까지 챙겨주는 리라 <span>지금 투표하고 1000만원 혜택받기</span> &gt; CLICK!</a>
+    </div>
+    <div id="counter">
+      <p id="counter1"></p>
+      <p>:</p>
+      <p id="counter2"></p>
+      <p>:</p>
+      <p id="counter3"></p>
+    </div>
 </section>
 <hr/>
 <th:block th:replace="layout/footer"></th:block>
 </body>
 <script src="/js/carousel.js"></script>
+<script src="/js/saleCount.js"></script>
 </html>
