WebServer / 메인페이지 : 카운트다운 수정

--- a/LILA-Server/lilaW/src/main/resources/templates/index.html
+++ b/LILA-Server/lilaW/src/main/resources/templates/index.html
@@ -6,6 +6,8 @@
     <link rel="shortcut icon" href="/img/lilaLg.png" type="image/x-icon"/>
     <link rel="stylesheet" type="text/css" href="/css/lila.css">
     
+    <script defer src="/js/carousel.js"></script>
+	<script defer src="/js/saleCount.js"></script>
     <title>리라</title>
 </head>
 <body>
@@ -128,6 +130,4 @@
 <hr/>
 <th:block th:replace="layout/footer"></th:block>
 </body>
-<script src="/js/carousel.js"></script>
-<script src="/js/saleCount.js"></script>
 </html>
