--- a/LILA-Server/lilaW/src/main/resources/static/css/lila.css
+++ b/LILA-Server/lilaW/src/main/resources/static/css/lila.css
@@ -1,6 +1,70 @@
 @charset "UTF-8";
 
-/* 메인 페이지 */
+/* 메인 페이지 S */
+/* 모달 S */
+.modal{
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items : center;
+  z-index: 100;
+  opacity: 100;
+}
+
+.md_overlay {
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 100%; height: 100%;
+  position: absolute;
+}
+
+.md_content {
+  width: 25%;
+  height: 400px;
+  position: relative;
+  background-color: orange;
+  text-align: center;
+  border-radius: 6px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.20), 0 6px 6px rgba(0, 0, 0, 0.20);
+  color: white;
+}
+
+.md_content p {
+  font-size: 18px;
+}
+
+.md_content h2 {
+  margin-bottom: 20%;
+}
+
+.md_content a {
+  background-color: white;
+  font-size: 25px;
+  padding: 5% 20% 5% 20%;
+  border-radius: 40px;
+}
+
+.close_button {
+  margin-left: 90%;
+  margin-top: 2%;
+  background-color: orange;
+  border: 0;
+  outline: 0;
+  color: white;
+  font-size: 25px;
+}
+
+.close_button:hover {
+  box-shadow: 0px 4px 21px 1px rgba(0, 0, 0, 0.1);
+}
+
+.hidden {
+  display: none;
+}
+/* 모달 E */
+
+/* 메뉴바 S */
 .menu_nav {
     display: flex;
     justify-content: space-between;
@@ -15,7 +79,9 @@
 .menu_nav h1 a img {
   width: 20px;
 }
+/* 메뉴바 E */
 
+/* 캐러셀 S */
 .slider {
   width: 100%;
   height: 500px;
@@ -100,12 +166,14 @@
   width: 15%;
 }
 
+/* 프로그레스바 S */
 .prog{
   width: 350px;
   height: 1px;
   background: rgb(206, 197, 197);
   margin-top: 31px;
 }
+
 .progs{
   width: 0;
   height: 1px;
@@ -114,7 +182,9 @@
   text-align: center;
   line-height: 50px;
 }
+/* 프로그레스바 E */
 
+/* 프로그레스바 좌우버튼 S */
 .prevBtn {
   height: 30px;
   margin: 3.5% 3% 3.5% 3%;
@@ -144,6 +214,8 @@
 .nextBtn:hover {
   box-shadow: 0px 4px 21px 1px rgba(0, 0, 0, 0.1);
 }
+/* 프로그레스바 좌우버튼 E */
+/* 캐러셀 E */
 
 .index_content1 {
   margin: 5% 20% 0 20%;
@@ -182,7 +254,7 @@
   font-weight: bold;
 }
 
-/* 시간 카운터 */
+/* 카운트다운 S */
 #counter {
   display: flex;
   height: 167px;
@@ -190,3 +262,4 @@
   font-size: 25px;
   font-weight: bolder;
 }
+/* 카운트다운 E */
