--- a/LILA-Server/lilaW/src/main/resources/templates/index.html
+++ b/LILA-Server/lilaW/src/main/resources/templates/index.html
@@ -13,10 +13,10 @@
 <body>
 <th:block th:replace="layout/header"></th:block>
 <section>
-	<div class="modal hidden">
-      <div class="md_overlay"></div>
-        <div class="md_content">
-          <button class="close_button">X</button>
+	<div class="firstModal f_hidden">
+      <div class="fmd_overlay"></div>
+        <div class="fmd_content">
+          <button class="f_closeButton">X</button>
           <p>2020 보상원정대</p>
           <h2>새해 소망에 투표하면<br>총 천만원 혜택 당첨!</h2>
           <a href="#">3초만에 투표하기</a>
@@ -139,7 +139,16 @@
           <p id="counter3"></p>
           <b>매일 오후 2시! 다른 동호회와 함께 등록시 가입료 무료</b>
         </div>
-        <button>매일 달라지는 혜택 알림 받기</button>
+        <button class="n_openButton">매일 달라지는 혜택 알림 받기</button>
+      </div>
+      <div class="noticeModal n_hidden">
+        <div class="nmd_overlay"></div>
+          <div class="nmd_content">
+            <button class="n_closeButton">X</button>
+            <h2>새해 소망에 투표하면<br>총 천만원 혜택 당첨!</h2>
+            <a href="#" class="k_method">카카오로 3초 만에 시작하기</a><br><br><br>
+            <a href="#" class="ano_method">다른 방법으로 시작하기</a>
+          </div>
       </div>
       <div class="index_content3_con">
         <img src="/img/free.jpg">
